# panorama

./: .gitignore  README.md  requirements.txt  setup.sh
ADSampling/: build.sh
ADSampling/src/: search_hnsw.cpp  search_ivf.cpp
PDX/: .gitignore  BENCHMARKING.md  CMakeLists.txt  CONTRIBUTING.md  INSTALL.md  README.md  build.sh  pyproject.toml  requirements.txt
PDX/.github/workflows/: ci.yml
PDX/benchmarks/: CMakeLists.txt  benchmark_utils.hpp  pdx_end_to_end.cpp  pdx_filtered.cpp  pdx_insertion.cpp  pdx_ivf.cpp  pdx_serialization.cpp  pdx_special_filtered.cpp  pdx_workload.cpp
PDX/benchmarks/datasets/ground_truth/: agnews-mxbai-1024-euclidean_100_norm  arxiv-nomic-768-normalized_100_norm  ccnews-nomic-768-normalized_100_norm  celeba-resnet-2048-cosine_100_norm  coco-nomic-768-normalized_100_norm  codesearchnet-jina-768-cosine_100_norm  gist-960-euclidean_100_norm  gooaq-distilroberta-768-normalized_100_norm  imagenet-align-640-normalized_100_norm  imagenet-clip-512-normalized_100_norm  instructorxl-arxiv-768_100_norm  laion-clip-512-normalized_100_norm  landmark-dino-768-cosine_100_norm  landmark-nomic-768-normalized_100_norm  llama-128-ip_100_norm  msong-420_100_norm  openai-1536-angular_100_norm  simplewiki-openai-3072-normalized_100_norm  word2vec-300_100_norm  yahoo-minilm-384-normalized_100_norm  yandex-200-cosine_100_norm  yi-128-ip_100_norm
PDX/benchmarks/gt/: agnews-mxbai-1024-euclidean_100_norm.json  arxiv-nomic-768-normalized_100_norm.json  ccnews-nomic-768-normalized_100_norm.json  celeba-resnet-2048-cosine_100_norm.json  coco-nomic-768-normalized_100_norm.json  codesearchnet-jina-768-cosine_100_norm.json  gist-960-euclidean_100_norm.json  gooaq-distilroberta-768-normalized_100_norm.json  imagenet-align-640-normalized_100_norm.json  imagenet-clip-512-normalized_100_norm.json  instructorxl-arxiv-768_100_norm.json  laion-clip-512-normalized_100_norm.json  landmark-dino-768-cosine_100_norm.json  landmark-nomic-768-normalized_100_norm.json  msong-420_100_norm.json  openai-1536-angular_100.json  openai-1536-angular_100_norm.json  simplewiki-openai-3072-normalized_100_norm.json  word2vec-300_100_norm.json  yahoo-minilm-384-normalized_100_norm.json  yi-128-ip_100_norm.json
PDX/benchmarks/kernels_playground/: README.md  kernels.cpp  kernels.py  requirements.txt
PDX/benchmarks/python_scripts/: WrapperBruteForce.py  benchmark_utils.py  ivf_faiss.py  ivf_faiss_sq8.py  playground_adsampling.py  requirements.txt  setup_data.py  setup_faiss.py  setup_filtered_search.py  setup_pdx.py  setup_utils.py
PDX/benchmarks/results/: plotter.ipynb
PDX/examples/: README.md  examples_utils.py  pdx_filtered.py  pdx_ivf.py  pdx_ivf_exhaustive.py  pdx_maintenance.py  pdx_persist.py  pdx_simple.py  pdx_tree_flat.py  pdx_tree_sq8.py
PDX/include/pdx/: cluster.hpp  clustering.hpp  common.hpp  index.hpp  ivf_wrapper.hpp  layout.hpp  profiler.hpp  searcher.hpp  utils.hpp
PDX/include/pdx/db_mock/: predicate_evaluator.hpp
PDX/include/pdx/distance_computers/: avx2_computers.hpp  avx512_computers.hpp  base_computers.hpp  neon_computers.hpp  scalar_computers.hpp
PDX/include/pdx/lib/: lib.hpp
PDX/include/pdx/pruners/: adsampling.hpp  bond.hpp
PDX/include/pdx/quantizers/: scalar.hpp
PDX/python/: lib.cpp
PDX/python/pdxearch/: __init__.py  index_factory.py  predicate_evaluator.py
PDX/tests/: CMakeLists.txt  generate_test_data.cpp  generate_test_ground_truth.cpp  test_distance_computers.cpp  test_filtered_search.cpp  test_index_properties.cpp  test_maintenance.cpp  test_search.cpp  test_serialization.cpp  test_utils.hpp
benches/: bench.py  bench_transform_threads.py  big_bench.json  big_bench.yaml  cache_analysis.py  cifar_vs_openai.py  example_config.json  fairness_audit.py  flamegraph.sh  hnsw_bench.yaml  ivf_bench.yaml  ivfpq_bench.yaml  sift_bench.yaml  transforms.py
data/: install_datasets.py
faiss/: .gitignore  bench.sh  big_bench_ivfpq.txt  build.sh  compile_commands.json  debug_faiss_pca.py  debug_faiss_pca.sh  first_ivfpq_pano_alexis_recall_bench.txt  first_ivfpq_pano_alexis_v2_recall_bench.txt  first_ivfpq_pano_bad_recall_bench.txt  first_ivfpq_pano_good_recall_bench.txt  kernel_bench  kernel_bench.cpp  not_unrolled_bench.txt  unrolled_bench.txt  unrolled_reorder_bench.txt
faiss/.cursor/rules/: faiss.mdc
faiss/benchs/: bench_hnsw_flat_panorama.py  bench_refine_panorama_gist.py  bench_refine_panorama_sift.py
faiss/faiss/: IndexFlat.cpp  IndexFlat.h  IndexHNSW.cpp  IndexHNSW.h  IndexIVFFlatPanorama.cpp  IndexIVFFlatPanorama.h  IndexIVFPQPanorama.cpp  IndexIVFPQPanorama.h  IndexRefine.cpp  IndexRefine.h  index_factory.cpp
faiss/faiss/impl/: HNSW.cpp  Panorama.h  PanoramaPQ.h  PanoramaStats.cpp  PanoramaStats.h  index_read.cpp  index_write.cpp
faiss/faiss/impl/panorama_kernels/: panorama_kernels-avx2.cpp  panorama_kernels-avx512.cpp  panorama_kernels-generic.cpp  panorama_kernels-neon.cpp  panorama_kernels-sve.cpp  panorama_kernels.h
faiss/faiss/python/: swigfaiss.swig
faiss/tests/: test_refine_panorama.py
hephaestus/: .gitignore  README.md  example.py  flake.nix  gen_gist_rc_queries.py  hephaestus.py  illustration.py  pyproject.toml
