[build-system]
requires = ["scikit-build-core>=0.3.3", "pybind11>=2.10.0"]
build-backend = "scikit_build_core.build"

[project]
name = "pdxearch"
version = "0.4"
description = "PDX: A Library for Fast Vector Search and Indexing"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "CWI", email = "lxkr@cwi.nl"}
]
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/cwida/PDX"
Repository = "https://github.com/cwida/PDX"

[tool.scikit-build]
cmake.source-dir = "."
wheel.packages = ["python/pdxearch"]
cmake.build-type = "Release"
