[project]
name = "hephaestus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Matteo Ceccarello", email = "matteo.ceccarello@unipd.com" }
]
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.11.0",
    "h5py>=3.13.0",
    "icecream>=2.1.4",
    "jax>=0.6.0",
    "joblib>=1.5.0",
    "numpy>=2.0.0",
    "optax>=0.2.4",
]


[project.scripts]
hephaestus = "hephaestus:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
